--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
         ],
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./*"],
+            "@/*": ["src/*"],
             "@assets/*": ["public/assets/*"],
             "@libs/*": ["public/libs/*"],
             "@data/*": ["src/data/*"],
