--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/uuid": "^10.0.0",
     "ai": "^5.0.89",
     "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
@@ -44,6 +47,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
+    "uuid": "^13.0.0",
     "wowjs": "^1.1.3",
     "zod": "^4.1.12"
   },
